# Ipo-data

./: .pylintrc  Image_classification.ipynb  README.md  constants.py  eg.py  main.py  practice.ipynb  pyproject.toml  stock_market_prediction.ipynb
ipopy/: ipo_data_handler.py
ipopy/config/: config.ini  config_loader.py  notifier_config.yaml
ipopy/config/notifier/: email.yaml  whatsapp.yaml
ipopy/data_classes/: ipo_data_class.py
ipopy/data_fetchers/: all_fetchers.py  data_fetcher_protocol.py  gmp_today.py  ipo_premium.py
ipopy/models/: ipo_data_model.py
ipopy/notifications/: data_sender_protocol.py  email_notifier.py  email_sender.py  notifier.py  whatsapp_notifier.py  whatsapp_sender.py
ipopy/utils/: constants.py  data_processor.py  date_utils.py  exceptions.py  urls.py  validators.py  webdriver_utils.py
tests/: conftest.py
tests/data_fetchers/: conftest.py  test_gmp_today.py  test_ipo_premium.py
tests/notifications/: conftest.py  test_email_notifier.py  test_whatsapp_notifier.py  test_whatsapp_sender.py
tests/utils/: conftest.py  test_date_utils.py  test_validators.py  test_webdriver_utils.py
utils/: gmp_today.py  ipo_premium.py  ipo_watch.py
