[tool.poetry]
name = "ipopy"
version = "0.1.0"
description = ""
authors = ["Nagalakshmi136 <naga708523@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
selenium = "^4.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
