[tool.poetry]
name = "ipopy"
version = "0.1.0"
description = "Fetch IPO (Initial Public Offering) data from different websites and sends it to any WhatsApp contact"
authors = ["Nagalakshmi136 <naga708523@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
selenium = "^4.16.0"
pytest = "^8.2.1"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
